force-app/main/default/objects/Program_Change_Detail__c/Program_Change_Detail__c.object-meta.xml
<CustomObject>
    <label>Program Change Detail</label>
    <nameField>
        <displayFormat>PCDN-{0000000}</displayFormat>
        <label>Program Change Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Change Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>