force-app/main/default/objects/Program_Change_Detail__c/fields/Current_Language__c.field-meta.xml
<CustomField>
    <fullName>Current_Language__c</fullName>
    <label>Current Language</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>