force-app/main/default/objects/Program_Change_Detail__c/fields/Related_To__c.field-meta.xml
<CustomField>
    <fullName>Related_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related To</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Program Change Details</relationshipLabel>
    <relationshipName>Program_Change_Details</relationshipName>
    <type>Lookup</type>
</CustomField>