force-app/main/default/objects/Program_Change_Detail__c/fields/Suggested_Language__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Language__c</fullName>
    <label>Suggested Language</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>